余白を修正

--- a/paper.tex
+++ b/paper.tex
@@ -1,11 +1,12 @@
-\documentclass[a4j]{jarticle}
+\documentclass[a4j]{jsarticle}
+\usepackage[top=30truemm,bottom=30truemm,left=15truemm,right=15truemm]{geometry}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{url}
 
-
 \title{
-\vspace{-25mm}
-201x年度 XXXXXXXXXXX\\第 x 回レポート}
+    \vspace{-25mm}
+    201x年度 XXXXXXXXXXX\\第 x 回レポート
+}
 \author{MTxxAxxx XX XX}
 \date{提出日 201x年xx月xx日}
 
